# agblimp

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
agblimp/: asgi.py  settings.py  wsgi.py
agblimp/urls/: __init__.py
apps/admin/: urls.py  views.py
apps/core/: admin.py  forms.py  models.py  tests.py
apps/core/migrations/: 0001_initial.py  0002_alter_client_id.py  0003_alter_client_complemento.py  0004_alter_client_complemento.py  0005_alter_question_client.py  0006_alter_question_date.py  0007_alter_testimony_client.py  0008_scheduling_collaborator_alter_scheduling_status_and_more.py  0009_rename_addess_client_address.py  0010_testimony_status_alter_scheduling_status.py  0011_alter_faq_response.py  0012_alter_faq_response.py  0013_alter_faq_response.py  0014_service_image.py  0015_alter_service_image.py  0016_alter_service_image.py  0017_remove_testimony_date_testimony_score.py  0018_alter_testimony_score.py  0019_jobopening_alter_service_image_candidate_and_more.py  0020_alter_candidate_curriculum_vitae.py  0021_transport_client_phone_client_road_and_more.py  0022_alter_client_phone_alter_client_road_and_more.py  0023_alter_testimony_client.py  0024_alter_client_number.py  0025_alter_client_road.py  0026_testimony_capa.py  (+6 more)
apps/servermedia/: apps.py  urls.py  views.py
apps/web/: tests.py  urls.py  views.py
static/css/: base.css  style.css
static/js/: app.js
staticfiles/css/: base.css
staticfiles/js/: app.js
templates/admin1/: base.html  dashboard.html  login.html
templates/web/: index.html
(+24 files in other folders)
